--- a/html/contacto.html
+++ b/html/contacto.html
@@ -41,23 +41,23 @@
         Atte, Fracciones con Lu</h2>
 
         <section>
-            <form action="https://formspree.io/f/xdkokggn" method="post" class="formulario">
+            <form action="https://formspree.io/f/xdkokggn" method="post" class="formulario" id="miFormulario">
                 <div>
                     <label for="nombre">Nombre: </label>
-                    <input type="text" id="Nombre" type="text">
+                    <input type="text" id="nombre" type="text" class="input">
                 </div>
                 <div>
                     <label for="email"> E-mail: </label>
-                    <input name="Email" id="email" type="email">
+                    <input name="Email" id="email" type="email" class="input">
                     <div>
                         <label for="mensaje">Dejanos tu mensaje: </label>
-                        <input type="text" name="mensaje" id="mensaje">
-                    </div>
-                    <div class="boton">
-                        <button type="submit">Submit</button>
+                        <input type="text" name="mensaje" id="mensaje" class="input">
+                    <div class="boton" >
+                        <button type="submit" id="submit">Enviar</button>
                     </div>
             </form>
         </section>
+        <script src="../index.js"></script>
 </body>
 
 </html>
