--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Lato:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: lightgray">
     <header>
         <a name="arriba"></a>
 
@@ -23,16 +25,30 @@
             <img src="assets/TODO SOBRE FRACCIONES - LOGO.png" alt="logo" class="logo">
         </div>
 
-        <nav class="Menu">
+        <!-- <nav class="Menu">
             <ul class="enlaces">
                 <li><a href="html/clasificacion.html"> Clasificación de fracciones</a></li>
-                <li><a href="html/fracciones-equivalentes.html"> Fracciones equivalentes</a></li>
-                <!-- PROXIMAMENTE 
+                <li><a href="html/fracciones-equivalentes.html"> Fracciones equivalentes</a></li> -->
+
+        <ul class="nav justify-content-evenly" style="background-color: #5dc584;">
+            <li class="nav-item ">
+                <a class="nav-link active text-black" aria-current="page" href="html/clasificacion.html">Clasificación de fracciones</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link text-black" href="html/fracciones-equivalentes.html">Fracciones equivalentes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-black" href="html/contacto.html">Contacto</a>
+            </li>
+        </ul>
+
+        <!-- PROXIMAMENTE 
                 <li><a href="html/suma-resta.html">Suma y resta de fracciones</a></li>
-                <li><a href="html/multiplicacion-division.html">Multiplicación y división de fracciones</a></li>-->
-                <li><a href="html/contacto.html"> Contacto </a></li>
-            </ul>
-        </nav>
+                <li><a href="html/multiplicacion-division.html">Multiplicación y división de fracciones</a></li>
+        <li><a href="html/contacto.html"> Contacto </a></li>
+        </ul>
+        </nav>-->
+
     </header>
 
     <main>
@@ -67,6 +83,10 @@
 
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
