--- a/html/cursos.html
+++ b/html/cursos.html
@@ -5,15 +5,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
+
     <header>
-        <h1>E-commerce</h1>
-        <a href="./carrito.html" class="icono-carrito">🛒<span id="contador-carrito">0</span ></a>
+        <a class="Home" href="../index.html"> <img class="img-home" src="../assets/HOME.png" alt="home"></a>
+        <div class="titulo"> Fracciones con Lu </div>
+        <a name="arriba"></a>
+        <h1 class="todo-sobre-fracciones"> TODO SOBRE FRACCIONES</h1>
+        <img src="../assets/TODO SOBRE FRACCIONES - LOGO.png" alt="logo" width="250px">
+
+        <nav class="Menu">
+            <ul class="enlaces">
+                <li><a href="Clasificacion.html"> Clasificación de fracciones</a></li>
+                <li><a href="fracciones-equivalentes.html"> Fracciones equivalentes</a></li>
+                <li><a href="contacto.html"> Contacto </a></li>
+                <li><a href="cursos.html"> Cursos </a></li>
+                <!-- PROXIMAMAMENTE
+                    <li><a href="suma-resta.html">Suma y resta de fracciones</a></li>
+                    <li><a href="multiplicacion-division.html">Multiplicación y división de fracciones</a></li> -->
+            </ul>
+        </nav>
+
+        <a href="./carrito.html" class="icono-carrito">🛒<span id="contador-carrito">0</span></a>
+
+        <h2 class="h2-cursos">Nuestros cursos</h2>
+        <h3>No dudes en comprar nuestros cursos para convertirte en un experto en fracciones</h3>
+
     </header>
-    <h1>Nuestros cursos</h1>
-    <h3>No dudes en comprar nuestros cursos para convertirte en un experto en fracciones</h3>
+
+
 
     <section id="cursos" class="cursos">
 
