--- a/html/fracciones-equivalentes.html
+++ b/html/fracciones-equivalentes.html
@@ -24,6 +24,7 @@
                 <li><a href="clasificacion.html"> Clasificación de fracciones</a></li>
                 <li><a href="fracciones-equivalentes.html"> Fracciones equivalentes</a></li>
                 <li><a href="contacto.html"> Contacto </a></li>
+                <li><a href="cursos.html"> Cursos </a></li>
 
                 <!-- PROXIMAMENTE
                 <li><a href="suma-resta.html">Suma y resta de fracciones</a></li>
