--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             <li class="nav-item">
                 <a class="nav-link text-black" href="html/contacto.html">Contacto</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-black" href="html/cursos.html">Cursos</a>
+            </li>
         </ul>
 
         <!-- PROXIMAMENTE 
