--- a/html/carrito.html
+++ b/html/carrito.html
@@ -21,7 +21,8 @@
                 <ul class="enlaces">
                     <li><a href="Clasificacion.html"> Clasificación de fracciones</a></li>
                     <li><a href="fracciones-equivalentes.html"> Fracciones equivalentes</a></li>
-                    <li><a href="html/contacto.html"> Contacto </a></li>
+                    <li><a href="contacto.html"> Contacto </a></li>
+                    <li><a href="cursos.html"> Cursos </a></li>
                     <!-- PROXIMAMAMENTE
                         <li><a href="suma-resta.html">Suma y resta de fracciones</a></li>
                         <li><a href="multiplicacion-division.html">Multiplicación y división de fracciones</a></li> -->
